# slide-decks

./: build_rva_data_ai_summit.py  main.py  pyproject.toml  vibe_coding.py
slides/: __init__.py  _deck.py  about_me_slide.py  agent_architecture_slide.py  agentic_ai_slide.py  agentic_runtime_slide.py  andrew_budd_quote_slide.py  code_puppy_brains_slide.py  code_puppy_intro_slide.py  code_puppy_slide.py  code_puppy_tools_slide.py  data_science_vibe_coding_good_fit.py  data_science_vibe_coding_slide.py  deeksha_yennem_quote_slide.py  end_slide.py  enshittification_slide.py  ethan_gold_quote_slide.py  history_of_coding_agents_slide.py  ipuppy_notebooks.py  laura_barnes_quote_slide.py  llxprt_alternative_slide.py  matthew_hawthon_quote_slide.py  open_source_betrayal_slide.py  privacy_future_slide.py  priya_venkat_quote_slide.py  promise_slide.py  table_of_contents.py  tarek_lahlou_quote_slide.py  title_slide.py  vc_leverage_slide.py  weve_seen_this_before_slide.py
utils/: __init__.py  common.py
